--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-easy-crop": "^5.0.7",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.2.1",
-    "react-player": "^2.16.0"
+    "react-player": "^2.16.0",
+    "react-resizable": "^3.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
