--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.2.1",
     "react-player": "^2.16.0",
+    "react-redux": "^9.1.2",
     "react-resizable": "^3.0.5"
   },
   "devDependencies": {
